# reginerd-fm

./: .env.example  .gitignore  README.md  SCHEDULE.md  pyproject.toml  run_operator.sh  writ
config/: blocks.yaml  cdex_schedule.yaml  genres.yaml  icecast.xml.example  schedule.yaml  stations.yaml
docs/: diary.html  diary.json  how-to.html  index.html
mac/: api_server.py  audio_analyzer.py  caster_relay.sh  config.yaml.example  discogs_lookup.py  feeder.py  health_monitor.sh  listener_daemon.sh  music_indexer.py  operator_daemon.sh  operator_prompt.md  play_history.py  playlist_intake.py  plex_music_feeder.py  radio.xml  render_diary.py  schedule.py  start_music_gen.sh  station_config.py  stream_metadata.sh  track_intro_gen.py  web_player_server.py  youtube_relay.sh
mac/agents/: curator.py  narrator.py  orchestrator.py  researcher.py  scriptwriter.py  show_card_gen.py  slack_notifier.py
mac/content_generator/: __init__.py  artist_tags.py  audio_features.py  blog_context.py  context.py  helpers.py  lastfm_context.py  ledger.py  listener_response_generator.py  music_bumper_generator.py  news_context.py  persona.py  talk_generator.py  topic_bank.py  weather_context.py
mac/kokoro/: tts.py
mac/launchd/: local.rgnrd.audio-analyzer.plist  local.rgnrd.feeder.plist  local.rgnrd.healthmon.plist  local.rgnrd.library-research.plist  local.rgnrd.nightly.plist  (+2 more)
output/: operator_topic_bank.json
player/: index.html  package-lock.json  package.json  vite.config.ts
tests/: test_api_server.py  test_station_config.py  test_talk_generator_topics.py
vps/: setup.sh
(+6 files in other folders)
