[project]
name = "reginerd-fm"
version = "0.1.0"
description = "reginerd.fm: 24/7 AI radio station powered by Plex + ElevenLabs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mutagen>=1.47.0",
    "pyyaml>=6.0.1",
    "elevenlabs>=1.0.0",
    "qrcode>=8.0",
    "slack-sdk>=3.42.0",
    "librosa>=0.11.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mac"]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
